<resources>
    <string name="app_name">ApplicationListe</string>
    <string name="new_contact">Ajout d\'un nouveau contact</string>
    <string name="add">Ajout</string>
    <string name="clear">Clear</string>
    <string name="retour">Retour</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="prenom">Prenom</string>
    <string name="age">Age</string>
    <string name="nC">newContact</string>
</resources>
